comecei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Cursos Gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-        <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 e CSS3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum error voluptas quisquam consequuntur debitis odit, sapiente quibusdam? At quod voluptatem laudantium quia? Veniam eius nesciunt iusto delectus. Sunt, eligendi voluptates.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ad sint modi, quam magni ipsam illum cumque dolor fuga quod voluptas minima! Neque, repellendus inventore deserunt ipsa itaque atque vel.</p>
         </article>
     </main>
     
