--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Cursos Gratis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em video">
         </header>
         <article>
             <h2>Curso de HTML5 e CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Html">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum error voluptas quisquam consequuntur debitis odit, sapiente quibusdam? At quod voluptatem laudantium quia? Veniam eius nesciunt iusto delectus. Sunt, eligendi voluptates.</p>
+            <p><a href="">Acesse o curso de html5</a></p>
         </article>
         <article>
             <h2>Curso de javascript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="javascript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ad sint modi, quam magni ipsam illum cumque dolor fuga quod voluptas minima! Neque, repellendus inventore deserunt ipsa itaque atque vel.</p>
+            <p><a href="">Acesse o curso de javascript</a></p>
         </article>
     </main>
     
